2010-09-24 Alexander Malysh <amalysh at kannel.org>
    * gwlib/list.c, test/test_list.c: fixed gwlist_sort if list get fragmented by usage.

2010-09-21 Alexander Malysh <amalysh at kannel.org>
    * wap/wtls-secmgr.c, wap/wtls.c, wap/wtls_pdu.c, wap/wtls_pdusupport.c, wap/wtls_statesupport.c:
      Fixed WTLS branch warnings.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-09-21 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: handle “Invalid system_type" as fatal and don't retry login.
      Thanks to Roy Walker <rwalker at sensorlogic.com> for this patch.

2010-09-13 Alexander Malysh <amalysh at kannel.org>
    * gwlib/pki.c, wmlscript/wsgram.[chy]: fixed some warnings.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-09-12 Alexander Malysh <amalysh at kannel.org>
    * gwlib/http.c: fixed issue that new servers were added every time gwthread_poll returns as well as on startup.
      This fixes #525.

2010-09-12 Alexander Malysh <amalysh at kannel.org>
    * merged wtls_provision branch.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-09-01 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/urltrans.c: Fixed bug that keyword-regex
      was case insensitive.
      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.

2010-08-06 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_boxc.c: fixed security issue that box-[allow|deny]-ip options were
      ignored for smsbox. This fixes #188.
      Thanks to Roland Discein for patch.

2010-08-05 Alexander Malysh <amalysh at kannel.org>
    * bootstrap.sh: changed to /bin/sh bacase e.g. FreeBSD has bash in /usr/local/bin.
      Thanks to Victor Luchitz <vluchits at gmail.com> for the hint.

2010-07-28 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr.[ch], gw/dlr_mem.c, gw/dlr_mssql.c, gw/dlr_mysql.c, gw/dlr_oracle.c, gw/dlr_p.h