@@ -1,4 +1,8 @@
 2010-09-24 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/list.[ch]: added new function gwlist_consumer_count to receive count consumers
+      for this list. Fixed comment for gwlist_sort function.
+
+2010-09-24 Alexander Malysh <amalysh at kannel.org>
     * gwlib/list.c, test/test_list.c: fixed gwlist_sort if list get fragmented by usage.
 
 2010-09-21 Alexander Malysh <amalysh at kannel.org>
